--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,6 @@
 \usepackage{makecell}
 \usepackage{float}
 \floatplacement{figure}{H}
-\usepackage{longtable}
 \usepackage[stable]{footmisc}
 \usepackage{lmodern}
 \usepackage{microtype}
@@ -28,8 +27,8 @@
 \usepackage[authoryear]{natbib}
 \usepackage{babelbib}
 \cleanlookdateon
-\exhyphenpenalty=1000
-\hyphenpenalty=1000
+\exhyphenpenalty=10000
+\hyphenpenalty=10000
 \widowpenalty=10000
 \clubpenalty=10000
 \setcitestyle{aysep={}} 
@@ -106,7 +105,7 @@ Over the last years, we have seen an emerging consensus about the causes and con
 
 Yet this consensus does not translate itself into effective political action. Global climate negotiations have progressed slowly under the guidelines of the United Nations Framework Convention on Climate Change (UNFCCC), and there is wide scepticism that multilateral talks will move faster in the next years \citep{cole2015advantages, hjerpe2015views}. As carbon dioxide emissions continue to increase, current efforts are likely to be insufficient to meet the Paris Agreement target of $2^{\circ}$C temperature rise above pre-industrial levels \citep{jordan2015emergence}. Existing research affirms that this unsatisfactory performance is partially due to institutional design \citep{ostrom2014polycentric, cole2015advantages}. For instance, multilateral forums downplay the domestic constraints political leaders experience when implementing strategies to reduce greenhouse gas emissions \citep{rayner2010eat}. Universal binding agreements also offer limited scope for experimentation, which hinders the ability for individuals to solve complex collective action problems \citep{de2014global}.
 
-Recently, scholars have argued that polycentric approaches provide a better `institutional fit' for natural resource systems \citep{turnheim2018innovating,berkhout2003negotiating, carlisle2017polycentric, ostrom1990governing}. Polycentrism is defined as a political arrangement in which formally independent units operating at different levels engage in a continuous process of cooperation and competition \citep{cole2015advantages,aligica2013co}. Experiences such as inshore fisheries in Turkey and timber management in Switzerland show that polycentrism induces individual cooperation and allows communities to avoid the `tragedy of the commons', that is, the overexploitation of shared resources \citep{hardin1968tragedy, ostrom1990governing}. Authors also point out that polycentric systems improve accountability as decentralisation reduces rent-seeking opportunities for interest groups \citep{turnheim2018innovating,ostrom2012nested,ostrom2014polycentric,sovacool2013adaptation}. 
+Recently, scholars have argued that polycentric approaches provide a better `institutional fit' for natural resource systems \citep{turnheim2018innovating,berkhout2003negotiating, carlisle2017polycentric, ostrom1990governing}. Polycentrism is defined as a political arrangement in which formally independent units operating at different levels engage in a continuous process of cooperation and competition \citep{cole2015advantages,aligica2013co}. Experiences such as inshore fisheries in Turkey and timber management in Switzerland show that polycentrism induces individual cooperation and allows communities to avoid the `tragedy of the commons', that is, the overexploitation of shared resources \citep{hardin1968tragedy, ostrom1990governing}. Authors also point out that polycentric systems improve accountability as decentralisation reduces rent-seeking opportunities for politicians and interest groups \citep{turnheim2018innovating,ostrom2012nested,ostrom2014polycentric,sovacool2013adaptation}. 
 
 Despite the potential advantages of polycentric arrangements, two challenges may undermine their popular support. First, polycentric systems demand constant civic participation at multiple government levels. But as climate change has diffuse benefits but concentrated costs, individuals have few incentives to join collective efforts \citep{barrett2003increasing, heitzig2011self, nordhaus2015climate}. Second, individuals tend to heavily discount climate change investments \citep{dasgupta2008discounting, nordhaus1997discounting}. Reducing carbon emissions requires significant expenditures today, yet the benefits of climate mitigation will arise only in a distant future. In that regard, citizens might prefer state-based initiatives to prevent climate change if private costs are too high or expected results too uncertain. 
 
@@ -121,65 +120,37 @@ In what follows, we describe our experimental methods and results. We then turn 
 
 We use a conjoint experiment to analyse how institutional characteristics shape support for climate change agreements in Latin America. First, Latin America is the most biodiverse region in the world and it plays a major role in global climate mitigation projects. For instance, the Amazon basin contains about half of the world's carbon stock, so local elites are crucial actors in emissions trading markets \citep{yang2018post}. Second, Latin American elites have wide disagreements over preservations policies, and the recent shift towards populist governments has highlighted the need for a robust framework to protect environmental resources \citep{ellner2019pinktide}. In that regard, veto players can counterbalance governmental time discounting and secure the long-term provision of public goods. Lastly, survey experiments on climate policies have focused on a small set of developed countries, so truly comparative experimental work is still scarce. We fill this gap by analysing 10 countries where elites have different stakes at climate change negotiations.  
 
-We use an original dataset compiled specifically for this study. The sampling process was as follows. From 1st of October to 5th of December 2018, we ran an elite survey in ten Latin American countries: Argentina, Bolivia, Brazil, Chile, Colombia, Costa Rica, Ecuador, Mexico, Panama, and Peru. The survey proceeded in two steps. We started by collecting information on Latin American elites. Our target was to interview 10 members of the Executive, 10 members of the Legislative, 15 academics, and 15 members of the civil society per country. To do so, we built a dataset of prospective respondents ten times our country target. Then, we ran an online and telephone survey where we collected information regarding the climate change agreements and other related questions.
+We use an original dataset compiled specifically for this study. The sampling process was as follows. From 1\textsuperscript{st} of October to 5\textsuperscript{th} of December 2018, we ran an elite survey in ten Latin American countries: Argentina, Bolivia, Brazil, Chile, Colombia, Costa Rica, Ecuador, Mexico, Panama, and Peru. We started by collecting information on Latin American elites. Our target was to interview 10 members of the Executive, 10 members of the Legislative, 15 academics, and 15 members of the civil society per country. To do so, we built a dataset of prospective respondents ten times our country target. Then, we ran an online and telephone survey where we collected information regarding the climate change agreements and other related questions.
 
-After finishing this dataset, we started the surveying stage. From 12th of November to 5th of December, we ran the survey by contacting elite members by phone or by email. We had two teams of enumerators, one based in S\~{a}o Paulo and another based in Rio de Janeiro, Brazil, comprised of Portuguese and Spanish native speakers. Although the overall aim of the survey was 500 responses, the teams collected 654 interviews. Please refer to the Supplementary Material for more information about the sampling process and descriptive statistics.
+After finishing this dataset, we started the surveying stage. From 12\textsuperscript{th} of November to 5\textsuperscript{th} of December, we ran the survey by contacting elite members by phone or by email. We had two teams of enumerators, one based in S\~{a}o Paulo and another based in Rio de Janeiro, Brazil, comprised of Portuguese and Spanish native speakers. Although the overall aim of the survey was 500 responses, the teams collected 654 interviews. Please refer to the Supplementary Material for more information about the sampling process and descriptive statistics.
 
 The hypothetical climate change agreements includes six attributes: 1) which organisation defines the rules; 2) how would conflicts be resolved; 3) what punishment should be applied to rule-breakers; 4) how should repeated violations be sanctioned; 5) which countries should bear the costs of the agreement; 6) how often should the agreement be renegotiated. Table~\ref{tab:categories} describes the values we included in each treaty attribute. \\
 
 \newpage 
 
-\begin{footnotesize}
-\begin{longtable}{l|l}
-\caption{\textbf{Design principles for climate change mitigation conjoint experiments}} \label{tab:categories} \\
-
-\hline \multicolumn{1}{c|}{\textbf{Attribute}} & \multicolumn{1}{c}{\textbf{Values}}\\ \hline 
-\endfirsthead 
-
-\multicolumn{2}{c}%
-{{\tablename \: \thetable{}: \textbf{Design principles for climate change mitigation conjoint experiments} (\textit{cont.})}} \\
-\hline \multicolumn{1}{c|}{\textbf{Attribute}} & \multicolumn{1}{c}{\textbf{Values}} \\ \hline 
-\endhead
-
-\hline \multicolumn{2}{r}{{\textit{Continued on next page}}} 
-\endfoot
-
-\hline
-\endlastfoot
-
-Who makes the rules? & International organisations \\ 
-& Federal government \\ 
-& Local government \\ 
-& Local community members \\
-& Non-Governmental organisations \\
+\begin{table}[ht]
+\begin{center}
+\caption{\textbf{Design principles for climate change mitigation conjoint experiments}}
+\label{tab:categories} 
+\begin{tabular}{l !{\vrule width 1}p{9cm}}
+\Xhline{2\arrayrulewidth}
+\textbf{Attribute} & \multicolumn{1}{c}{\textbf{Values}} \\
+\Xhline{2\arrayrulewidth} \\
+Who makes the rules? & International organisations; federal government; local government; local community members; non-governmental organisations \\
 & \\
-Conflict resolution mechanism & United Nations \\
-& Government bureaucracy \\
-& Local courts \\
-& Private arbitration \\
-& Informal norms \\
+Conflict resolution mechanism & United Nations; government bureaucracy; local courts; private arbitration; informal norms \\
 & \\
-Punishment & Imprisonment \\
-& Fines \\
-& Blacklist \\
-& None \\
+Punishment & Imprisonment; fines; blacklist; none \\
 & \\
-Punishment for repeated violations & More penalty \\
-& Same \\
-& Less penalty \\
+Punishment for repeated violations & More penalty; same; less penalty \\
 & \\
-Agreement costs & Rich countries pay more than poor countries \\
-& Proportional to history of emissions \\ 
-& Proportional to current emissions \\
-& Only rich countries pay\\
+Agreement costs & Rich countries pay more than poor countries; proportional to history of emissions; proportional to current emissions; only rich countries pay \\
 & \\
-Renegotiation & Never \\
-& Fifty years \\
-& Twenty years \\
-& Five years \\
-& One year\\
-\end{longtable}
-\end{footnotesize}
+Renegotiation & Never; fifty years; twenty years; five years; one year \\
+\Xhline{2\arrayrulewidth} 
+\end{tabular}
+\end{center}
+\end{table}
 
 The categories map the main conceptual differences between polycentric and state-led climate mitigation policies \citep{bechtel2013mass, ostrom1990governing}. The conjoint experiment design open the possibility for respondents to combine multiple levels of governance into a single climate change agreement as they see fit. We give no prior indication of whether a certain value is more prevalent in actual agreements, and we randomise the values to ensure that they all have the same probability of being selected. In total, there are 6,000 possible value combinations. Figure~\ref{fig:conjoint} illustrates our experimental design.\\
 
