--- a/manuscript/main.tex
+++ b/manuscript/main.tex
@@ -115,8 +115,8 @@ We design a conjoint experiment to assess which climate change governance system
 
 In what follows, we describe our experimental methods and results. We then turn to two additional analyses, in which we disaggregate the responses according to country and elite type, and proceed to the concluding remarks.
 
-\section{Research Design}%
-\label{sec:research_design}
+\section{Data and Methods}%
+\label{sec:data_and_methods}
 
 We use a conjoint experiment to analyse how institutional characteristics shape support for climate change agreements in Latin America. First, Latin America is the most biodiverse region in the world and it plays a major role in global climate mitigation projects. For instance, the Amazon basin contains about half of the world's carbon stock, so local elites are crucial actors in emissions trading markets \citep{yang2018post}. Second, Latin American elites have wide disagreements over preservations policies, and the recent shift towards populist governments has highlighted the need for a robust framework to protect environmental resources \citep{ellner2019pinktide}. In that regard, veto players can counterbalance governmental time discounting and secure the long-term provision of public goods. Lastly, survey experiments on climate policies have focused on a small set of developed countries, so truly comparative experimental work is still scarce. We fill this gap by analysing 10 countries where elites have different stakes at climate change negotiations.  
 
@@ -132,7 +132,7 @@ The hypothetical climate change agreements includes six attributes: 1) which org
 \begin{center}
 \caption{\textbf{Design principles for climate change mitigation conjoint experiments}}
 \label{tab:categories} 
-\begin{tabular}{l !{\vrule width 1}p{9cm}}
+\begin{tabular}{l !{\vrule width 1pt}p{9cm}}
 \Xhline{2\arrayrulewidth}
 \textbf{Attribute} & \multicolumn{1}{c}{\textbf{Values}} \\
 \Xhline{2\arrayrulewidth} \\
@@ -152,11 +152,11 @@ Renegotiation & Never; fifty years; twenty years; five years; one year \\
 \end{center}
 \end{table}
 
-The categories map the main conceptual differences between polycentric and state-led climate mitigation policies \citep{bechtel2013mass, ostrom1990governing}. The conjoint experiment design open the possibility for respondents to combine multiple levels of governance into a single climate change agreement as they see fit. We give no prior indication of whether a certain value is more prevalent in actual agreements, and we randomise the values to ensure that they all have the same probability of being selected. In total, there are 6,000 possible value combinations. Figure~\ref{fig:conjoint} illustrates our experimental design.\\
+The categories map the main conceptual differences between polycentric and state-led climate mitigation policies \citep{bechtel2013mass, ostrom1990governing}. The conjoint experiment design open the possibility for respondents to combine multiple levels of governance into a single climate change agreement as they see fit. We give no prior indication of whether a certain value is more prevalent in actual agreements, and we randomise the values to ensure that they all have the same probability of being selected. In total, there are 6,000 possible value combinations. Figure~\ref{fig:conjoint} illustrates our experimental design.
 
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=16cm]{conjoint-cropped.pdf}
+	\includegraphics[width=13cm]{conjoint-cropped.pdf}
 	\caption{\textbf{Example of conjoint experiment design}}
 	\label{fig:conjoint}
 \end{figure}
