--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -1,7 +1,7 @@
-% References
+%%% References
 
 @article{jordan2015emergence,
-  title={Emergence of polycentric climate governance and its future prospects},
+  title={{Emergence of Polycentric Climate Governance and Its Future Prospects}},
   author={Jordan, Andrew J and Huitema, Dave and Hild{\'e}n, Mikael and Van Asselt, Harro and Rayner, Tim J and Schoenefeld, Jonas J and Tosun, Jale and Forster, Johanna and Boasson, Elin L},
   journal={Nature Climate Change},
   volume={5},
@@ -12,7 +12,7 @@
 }
 
 @article{sovacool2013adaptation,
-  title={Adaptation: The complexity of climate justice},
+  title={{Adaptation: The Complexity of Climate Justice}},
   author={Sovacool, Benjamin K},
   journal={Nature Climate Change},
   volume={3},
@@ -23,7 +23,7 @@
 }
 
 @article{cole2015advantages,
-  title={Advantages of a polycentric approach to climate change policy},
+  title={{Advantages of a Polycentric Approach to Climate Change Policy}},
   author={Cole, Daniel H},
   journal={Nature Climate Change},
   volume={5},
@@ -34,7 +34,7 @@
 }
 
 @article{wiener2007think,
-  title={Think globally, act globally: The limits of local climate policies},
+  title={{Think Globally, Act Globally: The Limits of Local Climate Policies}},
   author={Wiener, Jonathan B},
   journal={University of Pennsylvania Law Review},
   volume={155},
@@ -57,7 +57,7 @@
 
 
 @article{sovacool2009scaling,
-  title={Scaling the policy response to climate change},
+  title={{Scaling the Policy Response to Climate Change}},
   author={Sovacool, Benjamin K and Brown, Marilyn A},
   journal={Policy and Society},
   volume={27},
@@ -68,24 +68,13 @@
 }
 
 @article{stern2008economics,
-  title={The economics of climate change},
+  title={{The Economics of Climate Change}},
   author={Stern, Nicholas},
   journal={American Economic Review},
   volume={98},
   number={2},
   pages={1--37},
   year={2008}
-}
-
-@article{keohane2011regime,
-  title={The regime complex for climate change},
-  author={Keohane, Robert O and Victor, David G},
-  journal={Perspectives on Politics},
-  volume={9},
-  number={1},
-  pages={7--23},
-  year={2011},
-  publisher={Cambridge University Press}
 }
 
 @article{green2014balance,
@@ -111,7 +100,7 @@
 }
 
 @article{ostrom2014polycentric,
-  title={A Polycentric Approach for Coping with Climate Change},
+  title={{A Polycentric Approach for Coping with Climate Change}},
   author={Ostrom, Elinor},
   journal={Annals of Economics \& Finance},
   volume={15},
@@ -121,7 +110,7 @@
 }
 
 @book{aligica2014institutional,
-  title={Institutional diversity and political economy: The Ostroms and beyond},
+  title={Institutional Diversity and Political Economy: The Ostroms and Beyond},
   author={Aligica, Paul Dragos},
   year={2014},
   publisher={Oxford University Press}
@@ -157,7 +146,7 @@
 }
 
 @article{hornsey2016meta,
-  title={Meta-analyses of the determinants and outcomes of belief in climate change},
+  title={{Meta-Analyses of the Determinants and Outcomes of Belief in Climate Changes}},
   author={Hornsey, Matthew J and Harris, Emily A and Bain, Paul G and Fielding, Kelly S},
   journal={Nature Climate Change},
   volume={6},
@@ -170,24 +159,24 @@
 @misc{stanfordearth2018,
  author = {De Witte, Melissa},
  editor = {{Stanford Earth}},
- title = {Public support for climate policy remains strong},
- url = {https://earth.stanford.edu/news/public-support-climate-policy-remains-strong},
+ title = {{Public Support for Climate Policy Remains Strong}},
+ howpublished = {\href{https://earth.stanford.edu/news/public-support-climate-policy-remains-strong}{\texttt{https://earth.stanford.edu/news/public-support-climate-policy-remains-strong}}},
  year = {2018},
 }
 
 @misc{pew2018climate,
  author = {Wike, Richard},
  editor = {{Pew Research Center}},
- title = {What the world thinks about climate change in 7 charts},
- url = {http://www.pewresearch.org/fact-tank/2016/04/18/what-the-world-thinks-about-climate-change-in-7-charts/},
+ title = {{What the World Thinks about Climate Change in 7 Charts}},
+ howpublished = {\href{http://pewrsr.ch/1PdpUf4}{\texttt{http://pewrsr.ch/1PdpUf4}}},
  year = {2018},
 }
 
 @misc{europe2018survey,
  author = {{European Commission}},
  editor = {{European Commission}},
- title = {Citizen support for climate action},
- url = {https://ec.europa.eu/clima/citizens/support_en},
+ title = {{Citizen Support for Climate Action}},
+ howpublished = {\href{https://ec.europa.eu/clima/citizens/support_en}{\texttt{https://ec.europa.eu/clima/citizens/support\_en}}},
  year = {2018},
 }
 
@@ -195,7 +184,7 @@
  author = {Jeff Tollefson},
  editor = {{Nature News}},
  title = {Global industrial carbon emissions to reach all-time high in 2018},
- url = {https://www.nature.com/articles/d41586-018-07666-6},
+ howpublished = {\href{https://www.nature.com/articles/d41586-018-07666-6}{\texttt{https://www.nature.com/articles/d41586-018-07666-6}}},
  year = {2018},
 } 
 
@@ -254,7 +243,7 @@
 }
 
 @article{carlisle2017polycentric,
-  title={Polycentric systems of governance: a theoretical model for the commons},
+  title={{Polycentric Systems of Governance: A Theoretical Model for The Commons}},
   author={Carlisle, Keith and Gruby, Rebecca L},
   journal={Policy Studies Journal},
   year={2017},
@@ -262,7 +251,7 @@
 }
 
 @article{hjerpe2015views,
-  title={Views on alternative forums for effectively tackling climate change},
+  title={{Views on Alternative Forums for Effectively Tackling Climate Change}},
   author={Hjerpe, Mattias and Nasiritousi, Naghmeh},
   journal={Nature Climate Change},
   volume={5},
@@ -284,7 +273,7 @@
 }
 
 @article{de2014global,
-  title={Global experimentalist governance},
+  title={{Global Experimentalist Governance}},
   author={De B{\'u}rca, Gr{\'a}inne and Keohane, Robert O and Sabel, Charles},
   journal={British Journal of Political Science},
   volume={44},
@@ -305,7 +294,7 @@
 }
 
 @article{hainmueller2014causal,
-  title={Causal inference in conjoint analysis: Understanding multidimensional choices via stated preference experiments},
+  title={{Causal Inference in Conjoint Analysis: Understanding Multidimensional Choices via Stated Preference Experiments}},
   author={Hainmueller, Jens and Hopkins, Daniel J and Yamamoto, Teppei},
   journal={Political Analysis},
   volume={22},
@@ -331,11 +320,11 @@
   title={Governing the Commons},
   author={Ostrom, Elinor},
   year={1990},
-  publisher={Cambridge University Press}
+  publisher={New York: Cambridge University Press}
 }
 
 @article{aligica2013co,
-  title={Co-production, polycentricity, and value heterogeneity: the Ostroms' public choice institutionalism revisited},
+  title={{Co-Production, Polycentricity, and Value Heterogeneity: The Ostroms' Public Choice Institutionalism Revisited}},
   author={Aligica, Paul Dragos and Tarko, Vlad},
   journal={American Political Science Review},
   volume={107},
@@ -346,7 +335,7 @@
 }
 
 @article{yang2018post,
-  title={{Post-drought decline of the Amazon carbon sink}},
+  title={{Post-Drought Decline of the Amazon Carbon Sink}},
   author={Yang, Yan and Saatchi, Sassan S and Xu, Liang and Yu, Yifan and Choi, Sungho and Phillips, Nathan and Kennedy, Robert and Keller, Michael and Knyazikhin, Yuri and Myneni, Ranga B},
   journal={Nature Communications},
   volume={9},
@@ -375,7 +364,7 @@
 }
 
 @article{bechtel2013mass,
-  title={Mass support for global climate agreements depends on institutional design},
+  title={{Mass Support for Global Climate Agreements Depends on Institutional Design}},
   author={Bechtel, Michael M and Scheve, Kenneth F},
   journal={Proceedings of the National Academy of Sciences},
   volume={110},
@@ -386,14 +375,14 @@
 }
 
 @book{turnheim2018innovating,
-  title={Innovating climate governance: moving beyond experiments},
+  title={Innovating Climate Governance: Moving Beyond Experiments},
   author={Turnheim, Bruno and Kivimaa, Paula and Berkhout, Frans},
   year={2018},
-  publisher={Cambridge University Press}
+  publisher={New York: Cambridge University Press}
 }
 
 @book{berkhout2003negotiating,
-  title={Negotiating environmental change: new perspectives from social science},
+  title={{Negotiating Environmental Change: New Perspectives from Social Science}},
   author={Berkhout, Frans},
   year={2003},
   publisher={Edward Elgar Publishing}
@@ -412,7 +401,7 @@
 
 @article{ellner2019pinktide,
 author = {Steve Ellner},
-title ={Pink-Tide Governments: Pragmatic and Populist Responses to Challenges from the Right},
+title ={{Pink-Tide Governments: Pragmatic and Populist Responses to Challenges from the Right}},
 journal = {Latin American Perspectives},
 volume = {46},
 number = {1},
@@ -431,3 +420,27 @@ year = {2019}
   publisher={JSTOR}
 }
 
+@Manual{leeper2018cregg,
+  title = {{cregg: Simple Conjoint Analyses and Visualization}},
+  author = {Thomas J. Leeper},
+  year = {2018},
+  note = {R package version 0.3.0},
+  howpublished = {\href{https://thomasleeper.com/cregg}{\texttt{https://thomasleeper.com/cregg}}}
+}
+
+@misc{rstats2019,
+    title = {{R: A Language and Environment for Statistical Computing}},
+    author = {{R Core Team}},
+    organization = {R Foundation for Statistical Computing},
+    address = {Vienna, Austria},
+    year = {2018},
+    howpublished = {\href{https://www.R-project.org}{\texttt{https://www.R-project.org}}},
+  }
+
+@misc{leeper2019subgroup,
+	title = {{Measuring Subgroup Preferences in Conjoint Experiments}},
+	author = {Leeper, Thomas J. and Hobolt, Sara B. and Tilley, James},
+	journal = {Political Analysis},
+	year = {2019},
+	howpublished = {\href{https://bit.ly/2E5oKSq}{\texttt{https://bit.ly/2E5oKSq}}}
+}
