--- a/manuscript/main.tex
+++ b/manuscript/main.tex
@@ -51,7 +51,9 @@
 	   \NAT@spacechar\NAT@@open\if*#1*\else#1\NAT@spacechar\fi\NAT@hyper@{\NAT@date}}
 	  {}{}
 \makeatother
-\usepackage{hyperref}
+\usepackage[hyphens]{url}
+\usepackage[hidelinks]{hyperref}
+\usepackage[hyphenbreaks]{breakurl}
 
 \hypersetup{
 	pdftitle={Do Elites Support Polycentric Climate Governance?},
@@ -81,7 +83,7 @@
 \begin{abstract}
 \onehalfspacing
 \noindent
-Policy makers generally assume that climate change mitigation requires global scale governance. In contrast, recent studies suggest that polycentrism provides an effective alternative to top-down environmental policies. But despite the high social costs each solution implies, it is unclear which institutional arrangement potential veto players support. Here we run a conjoint experiment with elite members of 10 Latin American countries and ask respondents to evaluate 6,000 possible climate change agreements. We find that institutional features have a substantial effect on support for climate treaties. Latin American elites prefer state-based solutions to global warming, but there is considerable heterogeneity across countries and elite types. Our results suggest novel ways to craft accountable, democratic climate change mitigation agreements, and they offer new insights on how to integrate interventions at the local and international levels.
+Policy makers generally assume that climate change mitigation requires global scale governance. In contrast, recent studies suggest that polycentrism provides an effective alternative to top-down environmental policies. But despite the high social costs each solution implies, it is unclear which institutional arrangement potential veto players support. Here we run a conjoint experiment with elite members of 10 Latin American countries and ask respondents to evaluate 6,000 possible climate change agreements. We find that institutional features have a substantial effect on support for climate treaties. Latin American elites prefer multilevel state-based solutions to global warming, but there is considerable heterogeneity across countries and elite types. Our results suggest novel ways to craft accountable, democratic climate change mitigation agreements, and they offer new insights on how to integrate interventions at the local and international levels.
 
 \vspace{.5cm}
 
@@ -109,7 +111,7 @@ Recently, scholars have argued that polycentric approaches provide a better `ins
 
 Despite the potential advantages of polycentric arrangements, two challenges may undermine their popular support. First, polycentric systems demand constant civic participation at multiple government levels. But as climate change has diffuse benefits but concentrated costs, individuals have few incentives to join collective efforts \citep{barrett2003increasing, heitzig2011self, nordhaus2015climate}. Second, individuals tend to heavily discount climate change investments \citep{dasgupta2008discounting, nordhaus1997discounting}. Reducing carbon emissions requires significant expenditures today, yet the benefits of climate mitigation will arise only in a distant future. In that regard, citizens might prefer state-based initiatives to prevent climate change if private costs are too high or expected results too uncertain. 
 
-Voluntary environmental governance faces further difficulties in new democracies. In Latin America, authoritarian regimes discouraged civil participation and reduced social capital, two requirements for effective polycentric arrangements \citep{aligica2014institutional,ostrom1990governing}. Top-down climate policies also create incentives for organised groups to collude with state officials and pursue private interests. In that scenario, elites and state representatives have \textit{de facto} veto power over environmental legislation and can override local decisions to their own benefit.
+Voluntary environmental governance faces further difficulties in new democracies. In Latin America, authoritarian regimes discouraged civil participation and reduced social capital, two necessary conditions for effective polycentric arrangements \citep{aligica2014institutional,ostrom1990governing}. Top-down climate policies also create incentives for organised groups to collude with state officials and pursue private interests. As a result, elites and state representatives have \textit{de facto} veto power over environmental legislation and can override local decisions to their own benefit.
 
 We design a conjoint experiment to assess which climate change governance system Latin American elites are willing to support. In our survey, we asked 654 `elites' -- academics, members of the executive power, legislators, businesspeople, and members of non-governmental organisations -- to select their preferred agreement in 7 randomised binary choices. We recruited respondents from Argentina, Brazil, Bolivia, Chile, Colombia, Costa Rica, Ecuador, Mexico, Panama, and Peru.
 
@@ -118,9 +120,9 @@ In what follows, we describe our experimental methods and results. We then turn 
 \section{Data and Methods}%
 \label{sec:data_and_methods}
 
-We use a conjoint experiment to analyse how institutional characteristics shape support for climate change agreements in Latin America. First, Latin America is the most biodiverse region in the world and it plays a major role in global climate mitigation projects. For instance, the Amazon basin contains about half of the world's carbon stock, so local elites are crucial actors in emissions trading markets \citep{yang2018post}. Second, Latin American elites have wide disagreements over preservations policies, and the recent shift towards populist governments has highlighted the need for a robust framework to protect environmental resources \citep{ellner2019pinktide}. In that regard, veto players can counterbalance governmental time discounting and secure the long-term provision of public goods. Lastly, survey experiments on climate policies have focused on a small set of developed countries, so truly comparative experimental work is still scarce. We fill this gap by analysing 10 countries where elites have different stakes at climate change negotiations.  
+We use a conjoint experiment to analyse how institutional characteristics shape support for climate change agreements in Latin America. First, Latin America is the most biodiverse region in the world and it plays a major role in global climate mitigation projects. For instance, the Amazon basin contains about half of the world's carbon stock, so local elites are essential for the success of emissions trading markets \citep{yang2018post}. Second, Latin American elites have wide disagreements over preservations policies, and the recent shift towards populist governments has highlighted the need for a robust framework to protect environmental resources \citep{ellner2019pinktide}. In that regard, veto players can counterbalance governmental time discounting and secure the long-term provision of public goods. Lastly, survey experiments on climate policies have focused on a small set of developed countries, so truly comparative experimental work remains scarce. We fill this gap by analysing 10 countries where elites have different stakes at climate change negotiations.  
 
-We use an original dataset compiled specifically for this study. The sampling process was as follows. From 1\textsuperscript{st} of October to 5\textsuperscript{th} of December 2018, we ran an elite survey in ten Latin American countries: Argentina, Bolivia, Brazil, Chile, Colombia, Costa Rica, Ecuador, Mexico, Panama, and Peru. We started by collecting information on Latin American elites. Our target was to interview 10 members of the Executive, 10 members of the Legislative, 15 academics, and 15 members of the civil society per country. To do so, we built a dataset of prospective respondents ten times our country target. Then, we ran an online and telephone survey where we collected information regarding the climate change agreements and other related questions.
+We use a dataset compiled specifically for this study. The sampling process was as follows. From 1\textsuperscript{st} of October to 5\textsuperscript{th} of December 2018, we ran an elite survey in ten Latin American countries: Argentina, Bolivia, Brazil, Chile, Colombia, Costa Rica, Ecuador, Mexico, Panama, and Peru. We started by collecting information on Latin American elites. Our target was to interview 10 members of the Executive, 10 members of the Legislative, 15 academics, and 15 members of the civil society per country. To do so, we built a dataset of prospective respondents ten times our country target. Then, we ran an online and telephone survey where we collected information regarding the climate change agreements and other related questions.
 
 After finishing this dataset, we started the surveying stage. From 12\textsuperscript{th} of November to 5\textsuperscript{th} of December, we ran the survey by contacting elite members by phone or by email. We had two teams of enumerators, one based in S\~{a}o Paulo and another based in Rio de Janeiro, Brazil, comprised of Portuguese and Spanish native speakers. Although the overall aim of the survey was 500 responses, the teams collected 654 interviews. Please refer to the Supplementary Material for more information about the sampling process and descriptive statistics.
 
@@ -161,7 +163,7 @@ The categories map the main conceptual differences between polycentric and state
 	\label{fig:conjoint}
 \end{figure}
 
-% Add paragraph about marginal means -- cite Leeper (2019).
+We estimate our models with the \texttt{cregg} package \citep{leeper2018cregg} for the \texttt{R} statistical language \citep{rstats2019}. We report marginal means instead of average marginal conditional effects (AMCE). \citet{leeper2019subgroup} show that AMCEs can be misleading when applied to subgroup analysis as results are sensitive to the choice of reference categories in interactions. Marginal means provide a clear description of quantities of interest -- preference towards a given attribute -- and allows for easy comparisons between different groups of respondents. AMCE estimates are available in the Supplementary Materials.
 
 \section{Results}%
 \label{sec:results}
