working on discussion

--- a/manuscript/main.tex
+++ b/manuscript/main.tex
@@ -53,7 +53,6 @@
 \makeatother
 \usepackage[hyphens]{url}
 \usepackage[hidelinks]{hyperref}
-\usepackage[hyphenbreaks]{breakurl}
 
 \hypersetup{
 	pdftitle={Do Elites Support Polycentric Climate Governance?},
@@ -163,7 +162,7 @@ The categories map the main conceptual differences between polycentric and state
 	\label{fig:conjoint}
 \end{figure}
 
-We estimate our models with the \texttt{cregg} package \citep{leeper2018cregg} for the \texttt{R} statistical language \citep{rstats2019}. We report marginal means instead of average marginal conditional effects (AMCE). \citet{leeper2019subgroup} show that AMCEs can be misleading when applied to subgroup analysis as results are sensitive to the choice of reference categories in interactions. Marginal means provide a clear description of quantities of interest -- preference towards a given attribute -- and allows for easy comparisons between different groups of respondents. AMCE estimates are available in the Supplementary Materials.
+We estimate our models with the \texttt{cregg} package \citep{leeper2018cregg} for the \texttt{R} statistical language \citep{rstats2019}. We report marginal means instead of average marginal conditional effects (AMCE). \citet{leeper2018subgroup} show that AMCEs can be misleading when applied to subgroup analysis as results are sensitive to the choice of reference categories in interactions. Marginal means provide a clear description of quantities of interest -- preference towards a given attribute -- and allows for easy comparisons between different groups of respondents. AMCE estimates are available in the Supplementary Materials.
 
 \section{Results}%
 \label{sec:results}
@@ -214,16 +213,18 @@ Differences emerge in two of the six dimensions of interest. First, whereas acad
 \section*{Discussion}
 \label{sec:discussion}
 
-In this article, we analyse whether Latin American elites support a polycentric climate change mitigation regime. We find that respondents prefer climate agreements that incorporate multiple government institutions, mainly international and local-level organisations. The results remain stable after disaggregating the data by country and elite composition. Our experiment also validates the importance of Elinor Ostrom's `design principles' as respondents largely act as her theory predicts. But despite the many similarities in the responses, we observe that national and occupational characteristics still influence how elites perceive the costs and benefits of carbon emission agreements.
+In this article, we analyse whether Latin American elites support a polycentric climate change mitigation regime. We find that respondents prefer international organisations to create rules and resolve conflicts, to impose increasing fines on violators and to renew agreements every five years.  The results also suggest that respondents are sceptical about non-governmental organisations and consistently reject informal norms as an instrument to solve disputes. Taken together, our experiment is very consistent with the Latin American tradition of heavier reliance on the state than on voluntary solutions. After disaggregating the data by country and elite type, we find large heterogeneity in the responses. Nevertheless, elites remain sceptical about civil society organisations and informal norms. 
 
-Our results have meaningful theoretical and practical implications. The findings we present here suggest there is considerable scope for new studies on polycentrism. For example, our analysis can be extended to examine if the Latin American public has the same opinion on multilevel arrangements as do the elites; and if not, it would be important to ask what explains the mismatch between groups. Moreover, future work may address whether other areas of scholarship which assume international-level coordination could benefit from Ostromian polycentricity.   
+Our results have important theoretical and practical implications. The findings we present here suggest there is considerable scope for new studies on global governance, specially in underrepresented regions. Our analysis can be extended to examine if the Latin American public has the same opinion on multilevel arrangements as do the elites; and if not, it would be important to know what explains the mismatch between groups. Moreover, future work may address whether other areas of scholarship which assume international-level coordination could benefit from multilevel arrangements, either state-based or not.   
 
-We also provide experimental evidence that individuals have preferences that are not fully represented in current climate change agreements. We identify that Latin American elites are interested not only in incorporating local demands into the current framework, but also in strengthening the role international organisations play in climate governance. In our view, these are reasons for optimism. They indicate willingness to engage under-represented sectors of the civil society while at the same time promoting broad, consensus-based carbon emission agreements. Polycentricity, in that regard, may provide the trust and accountability this complex system requires. 
+The findings also highlight the importance of comparative work in experimental studies. As a region, Latin America favours results that are in line with polycentric arrangements, but we find that those preferences derive from the aggregation of heterogeneous effects. Our study indicates researchers should be cautious about the external validity of experimental findings. % Add a couple more sentences here 
+
+With regards to environmental policies, we provide experimental evidence that individuals have preferences that are not fully represented in current climate mitigation agreements. We identify that Latin American elites are interested in incorporating different political actors and in strengthening the role international organisations play in climate governance. Future climate negotiations can achieve better results if they take those preferences into account. 
 
 \section*{Supplementary Material}
 \label{sec:supplementary}
 
-To view supplementary material for this article, please visit \href{http://github.com/danilofreire/climate-governance}{\texttt{http://github.com/danilofreire/climate-governance}}.
+Please visit \href{http://github.com/danilofreire/climate-governance}{\texttt{http://github.com/danilofreire/climate-governance}} for supplementary materials for this article.
 
 \newpage
 
