--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -420,7 +420,7 @@ year = {2019}
   publisher={JSTOR}
 }
 
-@Manual{leeper2018cregg,
+@misc{leeper2018cregg,
   title = {{cregg: Simple Conjoint Analyses and Visualization}},
   author = {Thomas J. Leeper},
   year = {2018},
@@ -437,10 +437,10 @@ year = {2019}
     howpublished = {\href{https://www.R-project.org}{\texttt{https://www.R-project.org}}},
   }
 
-@misc{leeper2019subgroup,
+@misc{leeper2018subgroup,
 	title = {{Measuring Subgroup Preferences in Conjoint Experiments}},
 	author = {Leeper, Thomas J. and Hobolt, Sara B. and Tilley, James},
 	journal = {Political Analysis},
-	year = {2019},
+	year = {2018},
 	howpublished = {\href{https://bit.ly/2E5oKSq}{\texttt{https://bit.ly/2E5oKSq}}}
 }
