fix section number "discussion"

--- a/manuscript/main.tex
+++ b/manuscript/main.tex
@@ -210,7 +210,7 @@ Figure~\ref{fig:types} shows the results disaggregated by elite type. We find th
 
 Differences emerge in two of the six dimensions of interest. First, whereas academics and members of the civil society are less favourable to allowing the federal government to formulate the rules, members of the executive and the legislative -- part of federal government themselves -- are more likely to see themselves as the preferred rule-makers. Second, members of the legislative have a stronger opinion that rich countries should bear the larger part of the agreement costs (58.4\%, SE = 3.5). 
 
-\section*{Discussion}
+\section{Discussion}
 \label{sec:discussion}
 
 In this article, we analyse whether Latin American elites support a polycentric climate change mitigation regime. We find that respondents prefer international organisations to create rules and resolve conflicts, to impose increasing fines on violators and to renew agreements every five years.  The results also suggest that respondents are sceptical about non-governmental organisations and consistently reject informal norms as an instrument to solve disputes. Taken together, our experiment is very consistent with the Latin American tradition of heavier reliance on the state than on voluntary solutions. After disaggregating the data by country and elite type, we find large heterogeneity in the responses. Nevertheless, elites remain sceptical about civil society organisations and informal norms. 
