--- a/manuscript/main.tex
+++ b/manuscript/main.tex
@@ -121,7 +121,7 @@ In what follows, we describe our experimental methods and results. We then turn 
 
 We use a conjoint experiment to analyse how institutional characteristics shape support for climate change agreements in Latin America. First, Latin America is the most biodiverse region in the world and it plays a major role in global climate mitigation projects. For instance, the Amazon basin contains about half of the world's carbon stock, so local elites are essential for the success of emissions trading markets \citep{yang2018post}. Second, Latin American elites have wide disagreements over preservations policies, and the recent shift towards populist governments has highlighted the need for a robust framework to protect environmental resources \citep{ellner2019pinktide}. In that regard, veto players can counterbalance governmental time discounting and secure the long-term provision of public goods. Lastly, survey experiments on climate policies have focused on a small set of developed countries, so truly comparative experimental work remains scarce. We fill this gap by analysing 10 countries where elites have different stakes at climate change negotiations.  
 
-We use a dataset compiled specifically for this study. The sampling process was as follows. From 1\textsuperscript{st} of October to 5\textsuperscript{th} of December 2018, we ran an elite survey in ten Latin American countries: Argentina, Bolivia, Brazil, Chile, Colombia, Costa Rica, Ecuador, Mexico, Panama, and Peru. We started by collecting information on Latin American elites. Our target was to interview 10 members of the Executive, 10 members of the Legislative, 15 academics, and 15 members of the civil society per country. To do so, we built a dataset of prospective respondents ten times our country target. Then, we ran an online and telephone survey where we collected information regarding the climate change agreements and other related questions.
+We use a dataset compiled specifically for this study. From 1\textsuperscript{st} of October to 5\textsuperscript{th} of December 2018, we ran an elite survey in ten Latin American countries: Argentina, Bolivia, Brazil, Chile, Colombia, Costa Rica, Ecuador, Mexico, Panama, and Peru. We started by collecting information on Latin American elites. Our target was to interview 10 members of the Executive, 10 members of the Legislative, 15 academics, and 15 members of the civil society per country. To do so, we built a dataset of prospective respondents ten times our country target. Then, we ran an online and telephone survey where we collected information regarding the climate change agreements and other related questions.
 
 After finishing this dataset, we started the surveying stage. From 12\textsuperscript{th} of November to 5\textsuperscript{th} of December, we ran the survey by contacting elite members by phone or by email. We had two teams of enumerators, one based in S\~{a}o Paulo and another based in Rio de Janeiro, Brazil, comprised of Portuguese and Spanish native speakers. Although the overall aim of the survey was 500 responses, the teams collected 654 interviews. Please refer to the Supplementary Material for more information about the sampling process and descriptive statistics.
 
